# bemserver-ui

./: .flaskenv  .pre-commit-config.yaml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: build-release.yaml  main.yaml
bemserver_ui/: __init__.py  settings.py
bemserver_ui/common/: __init__.py  const.py  time.py  tools.py  tree.py
bemserver_ui/extensions/: __init__.py  api_client.py  auth.py  campaign_context.py  error_handlers.py  flask_es6.py  jinja_custom_filters.py  partners.py  plugins.py
bemserver_ui/extensions/api_client/: __init__.py  client.py  exceptions.py  resources.py
bemserver_ui/extensions/timezones/: __init__.py  timezones-areas.json  timezones-full.json  timezones.json  timezones.py
bemserver_ui/internal_api/: __init__.py  analysis.py  buildings.py  campaign_scopes.py  campaigns.py  energy_consumption.py  events.py  notifications.py  sites.py  spaces.py  storeys.py  structural_elements.py  timeseries.py  timeseries_data.py  timeseries_datastates.py  user_groups.py  users.py  zones.py
bemserver_ui/internal_api/analysis/: __init__.py  completeness.py  degree_days.py  energy_consumption.py  weather.py
bemserver_ui/internal_api/dashboards/: __init__.py  energy_consumption.py
bemserver_ui/internal_api/semantics/: __init__.py  weather.py
bemserver_ui/internal_api/services/: __init__.py  cleanup.py  missing_data.py  outlier_data.py  weather_data.py
bemserver_ui/internal_api/timeseries/: __init__.py  (+3 more)
bemserver_ui/templates/: base.html  skeleton.html
bemserver_ui/views/: __init__.py  auth.py  campaign_scopes.py  campaigns.py  main.py  notifications.py  timeseries.py  user_groups.py  users.py
docs/deployment/: README.rst
requirements/: dev.txt  install.txt  tests.in  tests.txt
src/bemserver_ui/: __init__.py  settings.py
tests/: conftest.py  test_common_analysis.py  test_common_const.py  test_common_time.py  test_common_tools.py  test_common_tree.py  test_extensions_campaign_context.py  test_extensions_plugins.py  test_extensions_timezones.py  tools.py
(+482 files in other folders)
